--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -7,13 +7,13 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #202020;
-  --ifm-color-primary-dark: rgb(33, 175, 144);
-  --ifm-color-primary-darker: rgb(31, 165, 136);
-  --ifm-color-primary-darkest: rgb(26, 136, 112);
-  --ifm-color-primary-light: rgb(70, 203, 174);
-  --ifm-color-primary-lighter: rgb(102, 212, 189);
-  --ifm-color-primary-lightest: rgb(146, 224, 208);
+  --ifm-color-primary: #272c31;
+  --ifm-color-primary-dark: #171717;
+  --ifm-color-primary-darker: #161616;
+  --ifm-color-primary-darkest: #121212;
+  --ifm-color-primary-light: #1d1d1d;
+  --ifm-color-primary-lighter: #1e1e1e;
+  --ifm-color-primary-lightest: #222222;
   --ifm-code-font-size: 95%;
 }
 
