update to working figma styling

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -7,13 +7,13 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #272c31;
-  --ifm-color-primary-dark: #171717;
-  --ifm-color-primary-darker: #161616;
-  --ifm-color-primary-darkest: #121212;
-  --ifm-color-primary-light: #1d1d1d;
-  --ifm-color-primary-lighter: #1e1e1e;
-  --ifm-color-primary-lightest: #222222;
+  --ifm-color-primary: #474cfe;
+  --ifm-color-primary-dark: #272dfe;
+  --ifm-color-primary-darker: #171dfe;
+  --ifm-color-primary-darkest: #0107e2;
+  --ifm-color-primary-light: #676bfe;
+  --ifm-color-primary-lighter: #777bfe;
+  --ifm-color-primary-lightest: #a8aaff;
   --ifm-code-font-size: 95%;
 }
 
