--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -17,12 +17,34 @@
   --ifm-code-font-size: 95%;
 }
 
+.react-toggle-track {
+  background-color: rgba(0,0,0,0.2) !important;
+}
+
 .docusaurus-highlight-code-line {
   background-color: rgb(72, 77, 91);
   display: block;
   margin: 0 calc(-1 * var(--ifm-pre-padding));
   padding: 0 var(--ifm-pre-padding);
 }
+
+html[data-theme='light'] {
+  --ifm-background-color: #fff;
+  --ifm-table-stripe-background: #F6F7FE;
+  --ifm-menu-color-background-active: #F6F7FE ;
+  --ifm-menu-color-background-hover: #F6F7FE ;
+
+}
+.react-toggle .react-toggle-thumb, .react-toggle--checked .react-toggle-thumb {
+    border-color: #fff !important;
+  }
+
+html[data-theme='dark'] {
+  --ifm-background-color: #13162E;
+
+}
+
+
 
 .header-github-link:hover {
   opacity: 0.6;
