use visible colors for algolia search box

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -225,6 +225,8 @@ html[data-theme='light'] {
   --ifm-menu-color-background-hover: #F6F7FE ;
   --ifm-navbar-link-hover-color: #333;
 
+  --docsearch-highlight-color: #A334FB;
+  --docsearch-logo-color: #A334FB;
 }
 .react-toggle .react-toggle-thumb, .react-toggle--checked .react-toggle-thumb {
     border-color: #fff !important;
