--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -217,6 +217,13 @@ h1 {
   margin-top: 20px;
   line-height: 2.5rem;
 }
+
+h1.bigger {
+  font-size: 4rem;
+  letter-spacing: -0.5px;
+  margin-top: 20px;
+  line-height: 3.5rem;
+}
 h2 {
   font-size: 2rem;
 }
