--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -36,9 +36,10 @@
 .navbar {
   box-shadow: none;
   background: rgba(255,255,255,0.7);
-  -webkit-backdrop-filter: saturate(180%) blur(20px);
-backdrop-filter: saturate(180%) blur(20px);
+      backdrop-filter: blur(10px);
+
 }
+
 
 .menu {
   padding-top: 30px !important;
@@ -336,6 +337,16 @@ html[data-theme='light'] .header-github-link:before {
 .announcementBarContent_node_modules-\@docusaurus-theme-classic-lib-next-theme-AnnouncementBar-  a {
   text-decoration: none !important;
 }
+
+  @media only screen and (max-width: 996px) {
+.navbar {
+  box-shadow: none;
+  background: rgba(255,255,255,0.7);
+      backdrop-filter:none;
+
+}
+
+  }
 
 
   @media only screen and (max-width: 768px) {
