header image mobile fix

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -338,12 +338,28 @@ html[data-theme='light'] .header-github-link:before {
   text-decoration: none !important;
 }
 
+img.docsheadersmall {
+display: none;
+}
+
+
+
   @media only screen and (max-width: 996px) {
 .navbar {
   box-shadow: none;
   background: rgba(255,255,255,0.7);
       backdrop-filter:none;
 
+}
+
+img.docsheaderhome {
+  display: none;
+}
+
+img.docsheadersmall {
+  display: block;
+  width: 400px;
+  margin-bottom: 20px;
 }
 
   }
