Update validator pages

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -27,7 +27,13 @@
 
 }
 
+.admonition pre, .admonition code {
+  background-color: rgba(0,0,0,0.15);
+}
 
+.admonition pre code {
+  background: none;
+}
 
 .react-toggle-track {
   background-color: rgba(0,0,0,0.2) !important;
@@ -264,7 +270,6 @@ h5 {
 }
 
 .admonition code {
-  background-color: #B04BFF;
   color: white;
 }
 
