--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -210,6 +210,10 @@ p.podtext {
   max-width: 440px;
 }
 
+img.manufacturericon {
+  width: 130px;
+  margin-bottom: 10px;
+}
 img.homeicon {
   width: 76px;
   margin-bottom: 10px;
