helium wallet app initial documentation

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -481,6 +481,15 @@ display: none;
 }
 
 
+img.appscreenbanner {
+  /* height: 500px; */
+  display: inline-block;
+}
+
+img.appscreen {
+  height: 500px;
+  display: inline-block;
+}
 
 
   @media only screen and (max-width: 996px) {
