admonition note hover color adjustment

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -370,6 +370,18 @@ a.quicklinkred:hover {
   text-decoration: underline;
 }
 
+.admonition-note a {
+  color: grey;
+  opacity: 0.75;
+  text-decoration: underline;
+}
+
+.admonition-note a:hover {
+  color: lightgray;
+  opacity: 0.75;
+  text-decoration: underline;
+}
+
 a.block {
   display: block;
   width: fit-content;
