--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -327,6 +327,15 @@ a.quicklinkred:hover {
   color: white;
 }
 
+.admonition-note p,
+.admonition-note h5 {
+  color: black;
+}
+
+.admonition-note h5 {
+  font-size: var(--ifm-h5-font-size);
+}
+
 .announcementnav {
   background: #474dff;
   border-radius: 9999px;
@@ -357,6 +366,18 @@ a.quicklinkred:hover {
 
 .admonition a:hover {
   color: white;
+  opacity: 0.75;
+  text-decoration: underline;
+}
+
+.admonition-note a {
+  color: grey;
+  opacity: 0.75;
+  text-decoration: underline;
+}
+
+.admonition-note a:hover {
+  color: lightgray;
   opacity: 0.75;
   text-decoration: underline;
 }
