--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -518,3 +518,18 @@ img.appscreen {
     margin-bottom: 20px;
   }
 }
+
+.maps_iframe {
+  width: 100%;
+  height: 540px;
+  overflow: hidden;
+  border: 0;
+}
+
+.maps_iframe iframe {
+  width: 100%;
+  height: 640px;
+  overflow: hidden;
+  border: 0;
+  margin-top: -150px;
+}
