--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -483,6 +483,10 @@ img.appscreen {
   display: inline-block;
 }
 
+img.explorerSidebar {
+  display: inline-block;
+}
+
 @media only screen and (max-width: 996px) {
   .navbar {
     box-shadow: none;
