sidebar and breadcrumb fix, styleling

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -440,10 +440,15 @@ html[data-theme="dark"] {
   color: #a334fb;
 }
 
+.navbar__link.announcementnav,
 .navbar__link:hover.announcementnav {
   color: white;
-  background: #2b2faa;
+  background: #474dff;
   transition: all 0.2s ease;
+}
+
+.navbar__link {
+  color: black;
 }
 
 .header-github-link:hover {
