styling fix for admonition text

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -541,3 +541,34 @@ img.explorerSidebar {
   border: 0;
   margin-top: -150px;
 }
+
+.alert--secondary {
+  background-color: #ebedf0;
+  color: #000000 !important;
+}
+
+.alert--info {
+  background-color: #a334fb;
+  color: #ffffff !important;
+}
+
+.alert--info p,
+.alert--info p a {
+  color: #ffffff;
+}
+
+.alert--danger {
+  background-color: #fa383e;
+  color: #ffffff !important;
+}
+.alert--danger p {
+  color: #ffffff;
+}
+
+.alert--warning {
+  background-color: #ffba00;
+  color: #ffffff !important;
+}
+.alert--warning p {
+  color: #ffffff;
+}
