--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -572,3 +572,9 @@ img.explorerSidebar {
 .alert--warning p {
   color: #ffffff;
 }
+
+.img-center {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
