--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -578,3 +578,8 @@ img.explorerSidebar {
   justify-content: center;
   width: 100%;
 }
+
+img.app-store-badge {
+  height: 50px;
+  justify-content: center;
+}
