content and image updates
- spacer bars to visually break up sections
- image samples of Helium app migration flow
- removed over zealous cross links
- app mockup images
- reorg image files, optimzed file sizes

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -583,3 +583,8 @@ img.app-store-badge {
   height: 50px;
   justify-content: center;
 }
+
+img.app-mockup {
+  height: 300px;
+  justify-content: center;
+}
