--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -572,3 +572,19 @@ img.explorerSidebar {
 .alert--warning p {
   color: #ffffff;
 }
+
+.img-center {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+img.app-store-badge {
+  height: 50px;
+  justify-content: center;
+}
+
+img.app-mockup {
+  height: 300px;
+  justify-content: center;
+}
