--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -483,7 +483,7 @@ img.appscreenbanner {
 }
 
 img.appscreen {
-  height: 500px;
+  max-height: 500px;
   display: inline-block;
 }
 
@@ -522,21 +522,21 @@ img.explorerSidebar {
 
   img.headericon {
     width: 150px;
-    height: 150px;
+    max-height: 150px;
     margin-bottom: 20px;
   }
 }
 
 .maps_iframe {
   width: 100%;
-  height: 540px;
+  max-height: 540px;
   overflow: hidden;
   border: 0;
 }
 
 .maps_iframe iframe {
   width: 100%;
-  height: 640px;
+  max-height: 640px;
   overflow: hidden;
   border: 0;
   margin-top: -150px;
@@ -580,11 +580,11 @@ img.explorerSidebar {
 }
 
 img.app-store-badge {
-  height: 50px;
+  max-height: 50px;
   justify-content: center;
 }
 
 img.app-mockup {
-  height: 300px;
+  max-height: 300px;
   justify-content: center;
 }
