css housekeeping and added links

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -207,6 +207,19 @@ img.homeicon {
   width: 100%;
   margin-bottom: 20px;
 }
+
+img.spectrum-access-label {
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+img.crowdspot-vote-button {
+  max-width: 200px;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
+}
+
 img.docicon {
   padding-right: 6px;
 }
@@ -478,7 +491,7 @@ img.docsheadersmall {
 }
 
 img.appscreenbanner {
-  /* height: 500px; */
+  max-height: 500px;
   display: inline-block;
 }
 
@@ -587,4 +600,9 @@ img.app-store-badge {
 img.app-mockup {
   max-height: 300px;
   justify-content: center;
+}
+
+.crowdspot-chart {
+  max-height: 500px;
+  margin-bottom: 20px;
 }
