css fixup and added links to Crowdspot (#1060)
* max-height in place of height for narrow screens

* css housekeeping and added links

* written descriptions are now required

* typo and formatting

* removing custom admonition styling

Co-authored-by: Joey Hiller <1965053+jthiller@users.noreply.github.com>

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -207,6 +207,19 @@ img.homeicon {
   width: 100%;
   margin-bottom: 20px;
 }
+
+img.spectrum-access-label {
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+img.crowdspot-vote-button {
+  max-width: 200px;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
+}
+
 img.docicon {
   padding-right: 6px;
 }
@@ -314,28 +327,6 @@ a.quicklinkred:hover {
   color: #9c3a35;
 }
 
-.admonition h5 {
-  font-size: var(--ifm-h5-font-size);
-  color: white;
-}
-
-.admonition code {
-  color: white;
-}
-
-.admonition p {
-  color: white;
-}
-
-.admonition-note p,
-.admonition-note h5 {
-  color: black;
-}
-
-.admonition-note h5 {
-  font-size: var(--ifm-h5-font-size);
-}
-
 .announcementnav {
   background: #474dff;
   border-radius: 9999px;
@@ -362,24 +353,6 @@ a.quicklinkred:hover {
 
 .announcementnav span {
   font-weight: 300;
-}
-
-.admonition a:hover {
-  color: white;
-  opacity: 0.75;
-  text-decoration: underline;
-}
-
-.admonition-note a {
-  color: grey;
-  opacity: 0.75;
-  text-decoration: underline;
-}
-
-.admonition-note a:hover {
-  color: lightgray;
-  opacity: 0.75;
-  text-decoration: underline;
 }
 
 a.block {
@@ -478,12 +451,12 @@ img.docsheadersmall {
 }
 
 img.appscreenbanner {
-  /* height: 500px; */
+  max-height: 500px;
   display: inline-block;
 }
 
 img.appscreen {
-  height: 500px;
+  max-height: 500px;
   display: inline-block;
 }
 
@@ -522,55 +495,24 @@ img.explorerSidebar {
 
   img.headericon {
     width: 150px;
-    height: 150px;
+    max-height: 150px;
     margin-bottom: 20px;
   }
 }
 
 .maps_iframe {
   width: 100%;
-  height: 540px;
+  max-height: 540px;
   overflow: hidden;
   border: 0;
 }
 
 .maps_iframe iframe {
   width: 100%;
-  height: 640px;
+  max-height: 640px;
   overflow: hidden;
   border: 0;
   margin-top: -150px;
-}
-
-.alert--secondary {
-  background-color: #ebedf0;
-  color: #000000 !important;
-}
-
-.alert--info {
-  background-color: #a334fb;
-  color: #ffffff !important;
-}
-
-.alert--info p,
-.alert--info p a {
-  color: #ffffff;
-}
-
-.alert--danger {
-  background-color: #fa383e;
-  color: #ffffff !important;
-}
-.alert--danger p {
-  color: #ffffff;
-}
-
-.alert--warning {
-  background-color: #ffba00;
-  color: #ffffff !important;
-}
-.alert--warning p {
-  color: #ffffff;
 }
 
 .img-center {
@@ -580,11 +522,16 @@ img.explorerSidebar {
 }
 
 img.app-store-badge {
-  height: 50px;
+  max-height: 50px;
   justify-content: center;
 }
 
 img.app-mockup {
-  height: 300px;
+  max-height: 300px;
   justify-content: center;
+}
+
+.crowdspot-chart {
+  max-height: 500px;
+  margin-bottom: 20px;
 }
