--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -7,7 +7,7 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #fff;
+  --ifm-color-primary: #474cfe;
   --ifm-color-primary-dark: #272dfe;
   --ifm-color-primary-darker: #171dfe;
   --ifm-color-primary-darkest: #0107e2;
@@ -15,31 +15,19 @@
   --ifm-color-primary-lighter: #777bfe;
   --ifm-color-primary-lightest: #a8aaff;
   --ifm-code-font-size: 95%;
-  --ifm-toc-border-color: #ffffff;
-  --ifm-menu-color-active: #a334fb;
-  --ifm-menu-color-background-active: #fcf9ff;
-  --ifm-menu-color: #1c1e21;
-  --ifm-navbar-link-hover-color: #333;
-  --ifm-color-info: #a334fb;
-  --ifm-tabs-padding-horizontal: 20px;
-  --ifm-tabs-padding-vertical: 10px;
+  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
-.container {
-  max-width: 1100px;
-}
-
-.admonition pre,
-.admonition code {
-  background-color: rgba(0, 0, 0, 0.15);
-}
-
-.admonition pre code {
-  background: none;
-}
-
-.react-toggle-track {
-  background-color: rgba(0, 0, 0, 0.2) !important;
+/* For readability concerns, you should choose a lighter palette in dark mode. */
+[data-theme='dark'] {
+  --ifm-color-primary: #8c90fe;
+  --ifm-color-primary-dark: #757afe;
+  --ifm-color-primary-darker: #6c71fe;
+  --ifm-color-primary-darkest: #4f55fe;
+  --ifm-color-primary-light: #9fa2ff;
+  --ifm-color-primary-lighter: #a9acff;
+  --ifm-color-primary-lightest: #c8c9ff;
+  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
 
 .navbar {
