--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -7,7 +7,7 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #fff;
+  --ifm-color-primary: #474cfe;
   --ifm-color-primary-dark: #272dfe;
   --ifm-color-primary-darker: #171dfe;
   --ifm-color-primary-darkest: #0107e2;
