dark mode h4 font color

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -284,6 +284,10 @@ h5 {
   font-weight: 500;
 }
 
+html[data-theme='dark'] h4 {
+  color: #acb0c5;
+}
+
 p {
   color: #626886;
   font-size: 1.125rem;
