higher contrast side and nav bar in dark mode for mobile

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -26,7 +26,7 @@
   --ifm-color-primary-lightest: #cbccff;
   --ifm-color-primary-lighter: #afb1ff;
   --ifm-color-primary-light: #a0a3ff;
-  --ifm-color-primary: #9195fe;
+  --ifm-color-primary: #686df8;
   --ifm-color-primary-dark: #7b7ff6;
   --ifm-color-primary-darker: #6f73f3;
   --ifm-color-primary-darkest: #585dfe;
