darkmode element selectors correction

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -594,18 +594,18 @@ img.app-mockup {
 }
 
 html[data-theme='dark'] h2.subtitle,
-h5,
-h4,
-p {
+html[data-theme='dark'] h5,
+html[data-theme='dark'] h4,
+html[data-theme='dark'] p {
   color: #acb0c5;
 }
 
 html[data-theme='dark'] a.quicklink,
-.badge--secondary {
+html[data-theme='dark'] .badge--secondary {
   background: #3e3f3f;
 }
 
 html[data-theme='dark'] a.quicklink:hover,
-.badge--secondary:hover {
+html[data-theme='dark'] .badge--secondary:hover {
   background: #313232;
 }
