set font color to black

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -170,7 +170,7 @@ a:hover img.docicon {
 }
 
 .badge--secondary {
-  color: #96a5ca;
+  color: #000000;
   font-weight: 500;
   margin-right: 6px;
   background: #f2f5fc;
