home page adjustments and copywriting

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -306,7 +306,7 @@ a.quicklink {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 14px;
+  padding: 14px 1rem;
   border-radius: 10px;
   transition: all 0.2s ease;
 }
