emissions table css

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -567,6 +567,18 @@ img.app-mockup {
   margin-bottom: 20px;
 }
 
+.emmisions-table {
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  max-width: 1080px;
+}
+
+.emmisions-table > div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 /* bring 'read more' link closer to post summary */
 .blog-list-page footer {
   margin-top: 1.5rem;
