keep announcementnav from wrapping

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -360,6 +360,7 @@ a.quicklinkred:hover {
   display: flex;
   transition: all 0.2s ease;
   align-items: center;
+  white-space: nowrap;
 }
 
 .announcementnav:hover {
