Reorder nav items

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -430,6 +430,10 @@ html[data-theme='dark'] {
   --ifm-background-color: #13162e;
 }
 
+.navbar__brand {
+  min-width: 80px; /* Prevent colliding Helium logo */
+}
+
 .navbar__link:hover,
 .navbar__link--active,
 .table-of-contents__link:hover,
@@ -501,6 +505,15 @@ img.explorerSidebar {
   }
   .menu__link {
     color: #000;
+  }
+
+  .searchBox_node_modules-\@docusaurus-theme-classic-lib-theme-Navbar-Search-styles-module {
+    position: relative !important;
+    right: 0 !important;
+  }
+
+  .navbar__items--right .announcementnav {
+    margin-right: 1vw;
   }
 
   img.docsheaderhome {
