More clock updates.

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -652,6 +652,10 @@ html[data-theme='dark'] .badge--secondary:hover {
   opacity: .3;
 }
 
+.migration-status .countdown {
+  font-variant-numeric: tabular-nums;
+}
+
 .migration-status-not-started {}
 
 .migration-status-in-progress {
