--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -673,3 +673,35 @@ html[data-theme='dark'] .badge--secondary:hover {
   visibility: hidden;
   opacity: 0;
 }
+
+
+.screensnippet-wrapper {
+  background: #f5f7fd;
+  border-radius: 24px;
+  padding: 0.5rem;
+  margin: 0; /*overrides default*/
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.screensnippet-wrapper img {
+  max-height: 150px;
+}
+.screensnippet-wrapper figcaption {
+  background: white;
+  color:rgb(64, 68, 79);
+  text-wrap: balance; /*:soon:*/
+  font-size: smaller;
+  font-weight: 500;
+  padding: 0.25rem 1rem;
+  border-radius: 18px;
+}
+
+:is(:hover) > .🥩 {
+  display: initial;
+}
+.🥩 {
+  display: none;
+}
