handle large numbers on mobile

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -761,6 +761,8 @@ html[data-theme='dark'] .badge--secondary:hover {
 .dc-calc-table td {
   font-weight: bold;
   text-align: center;
+  overflow: hidden;
+  white-space: nowrap;
 }
 /* End DcCostEstimator.jsx */
 
